[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Enemies/Gorfo_FSM.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Hazards/Enemies/gorfo_walk.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Hazards/Enemies/gorfo_spit.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemies/Gorfo.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 11 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "spit",
"speed": 10.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 11 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 8 )

[node name="Gorfo" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 6
script = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12, 11 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 13, 6 )
frames = SubResource( 8 )
animation = "spit"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 32
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 12, 11 )
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 12, 14 )
shape = SubResource( 3 )

[node name="PlayerVisibility" type="RayCast2D" parent="."]
position = Vector2( 12, 11 )
enabled = true
collision_mask = 5

[node name="Proximity" type="Area2D" parent="."]
position = Vector2( 12, 11 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Proximity"]
position = Vector2( -11, -1 )
polygon = PoolVector2Array( 200, -100, 200, 100, 11, 1 )

[node name="Shoot" type="Timer" parent="."]
process_mode = 0

[node name="ShootPos" type="Position2D" parent="."]
position = Vector2( 17, 16 )

[node name="Walking" type="Timer" parent="."]

[node name="WalkTween" type="Tween" parent="."]

[node name="LeftEdge" type="RayCast2D" parent="."]
position = Vector2( 0, 22 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 4

[node name="RightEdge" type="RayCast2D" parent="."]
position = Vector2( 24, 22 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 4

[connection signal="player_spotted" from="." to="StateMachine" method="_on_Gorfo_player_spotted"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Proximity" to="." method="_on_Proximity_body_entered"]
[connection signal="body_exited" from="Proximity" to="." method="_on_Proximity_body_exited"]
[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]
[connection signal="timeout" from="Walking" to="." method="_on_Walking_timeout"]
